set reddit and email

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ nav:
 # only 'mail' is an exception.
 social_links:
   github: https://github.com/maaaaarco
-  reddit: /
-  mail: marco@spaghetti.dev
+  reddit: https://www.reddit.com/user/maaaaarco
+  mail: mailto:marco@spaghetti.dev
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
