--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Link to a page that gives an overview of all your projects.
 # This can be an external link (e.g., to you GitHub profile) or to another
 # page within your website.
-projects_url: ''
+projects_url: http://github.com/probberechts
 
 # Set the page direction to RTL or LTR. default is LTR. (if you set it 'rtl', the 'vazir' font will be loaded.)
 direction: ltr
@@ -15,15 +15,21 @@ direction: ltr
 # languages/*.yml
 nav:
   home: /
+  about: /about/
+  articles: /archives/
+  projects: projects_url
+
 
 # Links to your social media accounts.
 # The keys should correspond to Fontawesome icon names
 # (see https://fontawesome.com/icons?d=gallery&s=brands);
 # only 'mail' is an exception.
 social_links:
-  github: ''
-  reddit: ''
-  mail: ''
+  github: http://github.com/probberechts/cactus-dark
+  twitter: /
+  facebook: /
+  linkedin: /
+  mail: mailto:name@email.com
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
@@ -56,7 +62,7 @@ post:
 # Customize the copyright years
 # Note: if start_year/end_year not provided, will use current year.
 copyright:
-  start_year: 2019
+  start_year: 2016
   end_year:
 
 ##############################################################################
@@ -77,7 +83,7 @@ logo:
   height: 50
   url: /images/logo.png
   gravatar: false
-  grayout: false
+  grayout: true
 
 # Customize the favicons.
 # Cactus supports a limited set of the three most important icons:
@@ -117,7 +123,7 @@ page_width: 48
 ##############################################################################
 
 # Enable or disable the RSS feed.
-rss: atom.xml
+rss: false
 
 # Turn your web pages into graph objects (see http://ogp.me).
 open_graph:
@@ -161,8 +167,8 @@ umami_analytics:
 # logo and/or favicons of you website.
 # To generate hash: `$ echo -n "name@email.com" | md5`.
 gravatar:
-  email:
-  hash:
+  email: name@email.com
+  hash: d41d8cd98f00b204e9800998ecf8427e
 
 # loads libraries and styles from CDN instead or relying on local files
 cdn:
