--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ projects_url: http://github.com/probberechts
 
 # Set the page direction to RTL or LTR. default is LTR. (if you set it 'rtl', the 'vazir' font will be loaded.)
 direction: ltr
+language: zh-CN
 # Configure the navigation menu.
 # A pair 'Key: url' will result in a link to 'url' with the name 'Key' in the
 # navigation menu. Optionally, you can add translations for the 'Key' in
@@ -137,9 +138,9 @@ open_graph:
 # Plugins
 ##############################################################################
 
-# Open MathJax support for Latex
+# Enable MathJax support for Latex
 
-MathJax: true
+mathjax: true
 
 # Fill in your Disqus Comments Shortname to enable Disqus comments.
 disqus:
