Add search page to nav

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ direction: ltr
 # languages/*.yml
 nav:
   home: /
+  search: /search/
 #  about: /about/
   articles: /archives/
 #  projects: http://github.com/metters
