Add new page with CV

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ direction: ltr
 nav:
   home: /
   search: /search/
+  CV: /CV/Curriculum_Vitae_Matthias_Streidel.pdf
 #  about: /about/
   articles: /archives/
 #  projects: http://github.com/metters
