--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ nav:
   home: /
   about: /about/
   articles: /archives/
+  category: /categories/
+  tag: /tags/
   projects: http://github.com/rasauq1122
 
 
@@ -33,7 +35,7 @@ social_links:
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
-tags_overview: true
+tags_overview: false
 
 # Customize the overview with the most recent blog posts on the index page.
 # Options:
