modified homepage logo

--- a/_config.yml
+++ b/_config.yml
@@ -90,9 +90,9 @@ logo:
   enabled: true
   width: 50
   height: 50
-  url: /images/logo.png
+  url: /images/me_crop.jpg
   gravatar: false
-  grayout: true
+  grayout: false
 
 # Customize the favicons.
 # Cactus supports a limited set of the three most important icons:
