support custom global style injection

--- a/_config.yml
+++ b/_config.yml
@@ -136,6 +136,12 @@ favicon:
 # manifest:
 #   url: /manifest.json
 
+# Add custom CSS styles to every page.
+# This will try to compile an Stylus file at /css/global.styl
+# or a normal CSS sheet at /css/global.css
+# styles:
+#   - url: /css/global
+
 # The color scheme that should be used to highlight codeblocks.
 # See source/css/_highlight for a list of all available color schemes.
 # highlight: rainbow
